--- a/VandelayIndustries/war/WEB-INF/web.xml
+++ b/VandelayIndustries/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.ubc.cs310.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>loginService</servlet-name>
+    <servlet-class>com.ubc.cs310.server.LoginServiceImpl</servlet-class>
   </servlet>
-  
+
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/vandelayindustries/greet</url-pattern>
+    <servlet-name>loginService</servlet-name>
+    <url-pattern>/VandelayIndustries/login</url-pattern><!-- If this doesn't compile change VI -->
   </servlet-mapping>
   
   <!-- Default page to serve -->
